use interpolate for generated actions

--- a/kms/package.json
+++ b/kms/package.json
@@ -345,6 +345,7 @@
   "dependencies": {
     "argparse": "^2.0.1",
     "base-64": "^1.0.0",
+    "bluebird": "^3.7.2",
     "deep-equal": "^2.0.5",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
@@ -352,8 +353,8 @@
     "pluralize": "^8.0.0",
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
-    "uuid": "^9.0.0",
-    "theprogrammablemind": "9.5.1"
+    "theprogrammablemind": "9.5.1",
+    "uuid": "^9.0.0"
   },
   "version": "9.5.1",
   "license": "UNLICENSED"
