--- a/kms/package.json
+++ b/kms/package.json
@@ -200,7 +200,6 @@
     "common/emotions.instance.json",
     "common/emotions.js",
     "common/emotions.test.json",
-    "common/english_helpers.js",
     "common/errors.js",
     "common/errors.test.json",
     "common/evaluate.instance.json",
@@ -214,6 +213,8 @@
     "common/formulas.instance.json",
     "common/formulas.js",
     "common/formulas.test.json",
+    "common/can.js",
+    "common/can.instance.json",
     "common/gdefaults.js",
     "common/gdefaults.test.json",
     "common/help.js",
@@ -240,6 +241,7 @@
     "common/latin.js",
     "common/latin.test.json",
     "common/latin_helpers.js",
+    "common/english_helpers.js",
     "common/length.instance.json",
     "common/length.js",
     "common/length.test.json",
