--- a/kms/package.json
+++ b/kms/package.json
@@ -350,13 +350,14 @@
     "bluebird": "^3.7.2",
     "deep-equal": "^2.0.5",
     "lodash": "^4.17.21",
+    "lokijs": "^1.5.12",
     "node-fetch": "^2.6.1",
     "object-path": "^0.11.8",
     "pluralize": "^8.0.0",
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
-    "uuid": "^9.0.0",
-    "theprogrammablemind": "9.5.1-beta.10"
+    "theprogrammablemind": "9.5.1-beta.10",
+    "uuid": "^9.0.0"
   },
   "version": "9.5.1-beta.10",
   "license": "UNLICENSED"
