add missing file

--- a/kms/package.json
+++ b/kms/package.json
@@ -333,6 +333,9 @@
     "common/weight.instance.json",
     "common/weight.js",
     "common/weight.test.json",
+    "common/words.instance.json",
+    "common/words.js",
+    "common/words.test.json",
     "common/wp.instance.json",
     "common/wp.js",
     "common/wp.test.json",
