add missing file

--- a/kms/package.json
+++ b/kms/package.json
@@ -163,6 +163,7 @@
     "common/avatar.test.json",
     "common/can.instance.json",
     "common/can.js",
+    "common/can.test.json",
     "common/characters.js",
     "common/characters.test.json",
     "common/colors.instance.json",
