--- a/kms/package.json
+++ b/kms/package.json
@@ -91,6 +91,7 @@
       "description": "Knowledge related to physics",
       "includes": [
         "dimension",
+        "rates",
         "length",
         "pressure",
         "temperature",
@@ -193,6 +194,9 @@
     "common/dates.test.json",
     "common/dialogues.js",
     "common/dialogues.test.json",
+    "common/rates.instance.json",
+    "common/rates.js",
+    "common/rates.test.json",
     "common/dimension.instance.json",
     "common/dimension.js",
     "common/dimension.test.json",
