--- a/kms/package.json
+++ b/kms/package.json
@@ -115,6 +115,7 @@
         "reports",
         "tell",
         "pipboy",
+        "picarx",
         "wp",
         "reminders",
         "fastfood"
@@ -278,6 +279,9 @@
     "common/percentages.instance.json",
     "common/percentages.js",
     "common/percentages.test.json",
+    "common/picarx.instance.json",
+    "common/picarx.js",
+    "common/picarx.test.json",
     "common/pipboy.instance.json",
     "common/pipboy.js",
     "common/pipboy.test.json",
