--- a/kms/package.json
+++ b/kms/package.json
@@ -115,7 +115,7 @@
         "reports",
         "tell",
         "pipboy",
-        "picarx",
+        "tank",
         "wp",
         "reminders",
         "fastfood"
@@ -279,9 +279,9 @@
     "common/percentages.instance.json",
     "common/percentages.js",
     "common/percentages.test.json",
-    "common/picarx.instance.json",
-    "common/picarx.js",
-    "common/picarx.test.json",
+    "common/tank.instance.json",
+    "common/tank.js",
+    "common/tank.test.json",
     "common/pipboy.instance.json",
     "common/pipboy.js",
     "common/pipboy.test.json",
