--- a/kms/package.json
+++ b/kms/package.json
@@ -115,7 +115,7 @@
         "reports",
         "tell",
         "pipboy",
-        "tank",
+        "drone",
         "wp",
         "reminders",
         "fastfood"
@@ -320,9 +320,9 @@
     "common/stgame.test.json",
     "common/stm.js",
     "common/stm.test.json",
-    "common/tank.instance.json",
-    "common/tank.js",
-    "common/tank.test.json",
+    "common/drone.instance.json",
+    "common/drone.js",
+    "common/drone.test.json",
     "common/tell.js",
     "common/tell.test.json",
     "common/temperature.instance.json",
