--- a/kms/package.json
+++ b/kms/package.json
@@ -367,8 +367,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.5.1-beta.35"
+    "theprogrammablemind": "9.6.0"
   },
-  "version": "9.5.1-beta.35",
+  "version": "9.6.0",
   "license": "UNLICENSED"
 }
