deprecate so I can writing using the ultrasonic distance sensor for config

--- a/kms/package.json
+++ b/kms/package.json
@@ -56,7 +56,8 @@
       "name": "Hidden",
       "description": "Don't show in the UI",
       "includes": [
-        "tokenize"
+        "tokenize",
+        "drone_v1"
       ]
     },
     {
@@ -198,6 +199,9 @@
     "common/dimension.instance.json",
     "common/dimension.js",
     "common/dimension.test.json",
+    "common/drone_v1.instance.json",
+    "common/drone_v1.js",
+    "common/drone_v1.test.json",
     "common/drone.instance.json",
     "common/drone.js",
     "common/drone.test.json",
