--- a/kms/package.json
+++ b/kms/package.json
@@ -199,12 +199,12 @@
     "common/dimension.instance.json",
     "common/dimension.js",
     "common/dimension.test.json",
-    "common/drone_v1.instance.json",
-    "common/drone_v1.js",
-    "common/drone_v1.test.json",
     "common/drone.instance.json",
     "common/drone.js",
     "common/drone.test.json",
+    "common/drone_v1.instance.json",
+    "common/drone_v1.js",
+    "common/drone_v1.test.json",
     "common/edible.instance.json",
     "common/edible.js",
     "common/edible.test.json",
@@ -371,8 +371,8 @@
     "scriptjs": "^2.5.9",
     "table": "^6.7.1",
     "uuid": "^9.0.0",
-    "theprogrammablemind": "9.6.0"
+    "theprogrammablemind": "9.6.0-beta.0"
   },
-  "version": "9.6.0",
+  "version": "9.6.0-beta.0",
   "license": "UNLICENSED"
 }
