add missing file

--- a/kms/package.json
+++ b/kms/package.json
@@ -231,6 +231,7 @@
     "common/help.test.json",
     "common/helpers.js",
     "common/helpers/concept.js",
+    "common/helpers/drone.js",
     "common/helpers/conjunction.js",
     "common/helpers/dateTimeSelectors.js",
     "common/helpers/dialogues.js",
