handle rounding of numbers

--- a/kms/package.json
+++ b/kms/package.json
@@ -271,6 +271,7 @@
     "common/negation.js",
     "common/negation.test.json",
     "common/numbers.js",
+    "common/numbers.instance.json",
     "common/numbers.test.json",
     "common/ordering.instance.json",
     "common/ordering.js",
